expressAndDBEachPod/deployment-express.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-deployment
  labels:
    app: express-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: express-pod
  template:
    metadata:
      labels:
        app: express-pod
    spec:
      containers:
        - name: express-container
          image: docker.io/library/express_db_each_pod:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
