expressAndDBEachPod/deployment-maria.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maria-deployment
  labels:
    app: maria-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maria-pod
  template:
    metadata:
      labels:
        app: maria-pod
    spec: # 템플릿 스펙 섹션 시작
      containers: # 컨테이너 섹션 시작
        - name: maria-container
          image: mysql:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http # 포트 이름: http
              containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-storage
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
