expressAndDBEachPod/service-express.yml
apiVersion: v1
kind: Service
metadata:
  name: express-service
spec:
  selector:
    app: express-pod
  ports:
    - protocol: TCP
      port: 31000
      targetPort: 3000
  type: NodePort
