expressAndDBEachPod/service-maria.yml
apiVersion: v1
kind: Service
metadata:
  name: maria-service
spec:
  selector:
    app: maria-pod
  ports:
    - protocol: TCP
      port: 32000
      targetPort: 3306
  type: NodePort
